--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-intersection-observer": "^9.13.0",
     "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
