--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "build:docs": "typedoc --options typedoc.json",
+    "build:tmdb-docs": "typedoc --options typedoc.json",
     "build:changelog": "bump changelog generate --config .bumprc.json",
     "biome": "biome check ./src",
     "biome:write": "biome check ./src --write",
