refactor: create the folder `src/components/compound` to contain multi-file components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     ],
     "paths": {
       "@/*": ["./src/*", "./src/systems/*"],
+      "@/components/*": ["./src/components/*", "./src/components/compound/*"],
       "content-collections": ["./.content-collections/generated"]
     }
   },
