--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*", "./src/systems/*"],
+      "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*", "./src/components/compound/*"],
       "content-collections": ["./.content-collections/generated"]
     }
